        - Moved downloading stage to start of 'do_actions' method.
        - Reverted "Don't introduce action loops when uniting 'remove' and
          'unpack' actions".
        - Instead, tried to drop extraneous action interdepedencies by using and
          checking saved relation info and merging 'unpack' with 'configure'.
        - In case some package have only 'configure' action without 'unpack',
          check for conflicts too in a straightforward way.
    - Config:
      - New configuration option 'cupt::resolver::track-reasons'.
    - Cache:
      - New free subroutine 'get_path_of_debian_copyright'.
      - When parsing release data, require first symbol of version to be digit.
  * doc:
    - cupt.1:
      - Renewed the list of supported APT configuration options.
      - Mentioned the way to send bug reports and IRC discussion channel.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Sun, 24 May 2009 12:02:24 +0300

cupt (0.1.3) unstable; urgency=low

  * debian/control:
    - Fixed misspelled Recommends 'liblocale-gettext-perl'.
    - Allow DM uploads.
  * cupt:
    - 'show' subcommand:
      - Show also source version if present.
    - 'changelog' subcommand:
      - Use source version for fetching remote changelogs if present. Fixes
        determining remote path for versions that had a binary-only rebuild(s).
    - 'policy' subcommand:
      - When called without arguments, print available Releases.
    - Exclude superfluous 'use Locale::gettext', Cupt::Core module do all
      needed manipulations to provide gettext. Thanks to
      David Broome <dbroome@gmail.com>. (Closes: #529167)
  * Cupt:
    - Cache:
      - New method 'get_binary_release_data'.
      - New method 'get_source_release_data'.
      - Include base URI in release info.
      - Installed versions of packages now have archive 'installed',
        codename 'now', vendor 'dpkg' in release info.
      - BinaryVersion: